--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=Java5
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=WEBSHOP_JAVA5;encrypt=false
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
